--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/9.tenant-MEMStore-memory-full-troubleshooting.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/9.tenant-MEMStore-memory-full-troubleshooting.md
@@ -127,7 +127,7 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
 
 * 减缓 MEMstore 写入速度。
 
-  您可以使用 MEMstore 写入限速功能来处理该问题。OceanBase Memstore 写入限速的工作原理是：当租户的 MEMstore 内存使用量达到 MEMstore 的的 90%(通过配置项 `writing_limit_trigger_percentage` 可调)时，即触发写入限速，此后的内存分配受限。通过增加 query 的运行时间（response time), 从而降低外部的写入速度。 当 MEMstore 的内存恢复到限速水位之下，OceanBase 会周期性地检查并关闭掉 MEMstore 写入限速，使得 MEMstore 在恢复容量的情况下恢复增量数据的处理能力。
+  您可以使用 MEMstore 写入限速功能来处理该问题。OceanBase MemStore 写入限速的工作原理是：当租户的 MemStore 内存使用量达到 MemStore 的的 90%(通过配置项 `writing_limit_trigger_percentage` 可调)时，即触发写入限速，此后的内存分配受限。通过增加 query 的运行时间（response time), 从而降低外部的写入速度。 当 MEMstore 的内存恢复到限速水位之下，OceanBase 会周期性地检查并关闭掉 MEMstore 写入限速，使得 MEMstore 在恢复容量的情况下恢复增量数据的处理能力。
 
   OB 的 MEMstore 写入限速是通过以下两个参数进行控制和调整。
   * `writing_throttling_trigger_percentage`：控制写入限速的触发。
@@ -145,5 +145,5 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
 
   这两个参数为租户级配置项，如果在 sys 租户下设置的话，需要显示的指定 tenant，否则设置的是 sys 租户的配置项。示例：alter system set writing_throttling_trigger_percentage=90 tenant='oracle'；
 
-  虽然 OceanBase 有能力对大并发的 DML 负载进行 MEMstore 的写入限速，使得大量并发进入到 OBServer 的 DML 语句能够更慢速的操作来保证最终被处理完。但是 OBServer 集群对于同时产生的并发写入始终是有技术上限的，在进行 OceanBase Memstore 做写入限速微调的同时也请同步验证并发 DML 的规模是否合理，如果业务允许请通过降低并发 DML 语句的并发量来保证相应的业务场景完成。
+  虽然 OceanBase 有能力对大并发的 DML 负载进行 MEMstore 的写入限速，使得大量并发进入到 OBServer 的 DML 语句能够更慢速的操作来保证最终被处理完。但是 OBServer 集群对于同时产生的并发写入始终是有技术上限的，在进行 OceanBase MemStore 做写入限速微调的同时也请同步验证并发 DML 的规模是否合理，如果业务允许请通过降低并发 DML 语句的并发量来保证相应的业务场景完成。
   
