--- a/zh-CN/1.users-guide/12.reference-guide/3.system-configuration-items/143.memstore_limit_percentage.md
+++ b/zh-CN/1.users-guide/12.reference-guide/3.system-configuration-items/143.memstore_limit_percentage.md
@@ -10,7 +10,7 @@ memstore_limit_percentage
 | 取值范围             | \[1, 99\] |
 | 是否重启 OBServer 生效 | 否         |
 
-`memstore_limit_percentage` 配置项用于计算 Memstore_limit 的值：
+`memstore_limit_percentage` 配置项用于计算 memstore_limit 的值：
 
 `memstore_limit_percentage = memstore_limit / min_memory`
 
