--- a/zh-CN/15.oceanbase-database-overview/14.observer-architecture/3.observer-threading-model/3.background-threads.md
+++ b/zh-CN/15.oceanbase-database-overview/14.observer-architecture/3.observer-threading-model/3.background-threads.md
@@ -1,6 +1,7 @@
 # 后台线程
 
 下表列举出 OBServer 的一部分后台线程及其功能描述。大部分场景下用户无需关注其实现细节。
+
 >**说明**
 >
 >在 OBServer 版本迭代中会对后台线程持续优化，因此有些后台线程会在版本升级的过程出现消失、合并等情况，也有可能会出现新的后台线程。
@@ -15,7 +16,7 @@
 | PartWorker                                   | Trx      | 1    | 遍历本机所有的 partition，做以下操作： 1. 每隔 50ms 尝试写事务层 checkpoint log。   2. 每隔 15s 计算迁移的快照点。   3. 每隔 10s 驱动本 partition 上所有活跃事务，为其检查 scheduler 的状态，用于事务上下文的 GC。   4. 每隔 10s 检查下该 partition 复制表的状态。   5. 每隔 10s 驱动刷新本 partition 上缓存的 clog 日志。    |
 | LockWaitMgr                                  | Trx      | 1    | 用于热点行场景下，等锁队列兜底的唤醒保障，比如语句超时，session 被 kill。                                                                                                                                                                                                                                                                                                                                                                                              |
 | ClogAdapter                                  | Trx      | 8    | 用于事务层异步提交 clog。                                                                                                                                                                                                                                                                                                                                                                                                                          |
-| ObTransService                               | Trx      | 6    | 主要负责以下功能： *用于事务提交过程处理 error msg* 用于语句回滚失败之后的重试。   * 用于提前解行锁场景，后继事务的唤醒操作。                                                                                                                                                                                                                         |
+| ObTransService                               | Trx      | 6    | 主要负责以下功能： <ul><li>用于事务提交过程处理 error msg</li> <li>用于语句回滚失败之后的重试。   </li><li>用于提前解行锁场景，后继事务的唤醒操作。 </li></ul>                                                                                                                                                                                                                        |
 | GCCollector                                  | storage  | 1    | 用于定期检查本机所有 partition 是否能够 GC，如果可以则触发 GC 动作。                                                                                                                                                                                                                                                                                                                                                                                              |
 | RebuildSche                                  | storage  | 1    | 定期驱动需要 rebuild 的 partition 任务。                                                                                                                                                                                                                                                                                                                                                                                                           |
 | PurgeWorker                                  | stroage  | 1    | 后台 memtable 的标记删除操作。                                                                                                                                                                                                                                                                                                                                                                                                                     |
