--- a/zh-CN/15.oceanbase-database-overview/7.distributed-database-objects/3.partitions-and-replicas/2.replica-types/1.overview-of-replicas.md
+++ b/zh-CN/15.oceanbase-database-overview/7.distributed-database-objects/3.partitions-and-replicas/2.replica-types/1.overview-of-replicas.md
@@ -26,7 +26,7 @@ locality='F@z1,F@z2,F{1},R{ALL_SERVER}@z3,L@z4,L@z5'
 
 * 对于 R 型副本：该值上限为租户对应 Zone 的可用 Unit 数目，或者指定为 ALL_SERVER（表示尽可能在对应 Zone 创建 R 副本），或者不指定（不指定视作 1）。
 
-为了限定副本的 MemTable 内存属性，引入一个属性名为 memstore_percent，表示该**副本 Memstore 占用内存上限与 Leader 占用内存上限的比值** 。目前， memstore_percent 属性可以 **作用于 F、R 型副本** ，语法示例如下：
+为了限定副本的 MemTable 内存属性，引入一个属性名为 memstore_percent，表示该**副本 MemStore 占用内存上限与 Leader 占用内存上限的比值** 。目前， memstore_percent 属性可以 **作用于 F、R 型副本** ，语法示例如下：
 
 ```sql
 locality='F@z1,F{memstore_percent:0}@z2,F{1,memstore_percent:100},R{ALL_SERVER}@z3,L@z4,L@z5'
