不规范词修改

--- a/zh-CN/1.users-guide/3.installation-and-deployment/16.deploy-ob-in-kubernetes-via-ob-operator.md
+++ b/zh-CN/1.users-guide/3.installation-and-deployment/16.deploy-ob-in-kubernetes-via-ob-operator.md
@@ -162,7 +162,7 @@ spec:
   
 - `data-log`：OceanBase 日志存储配置，可以指定大小和 `storageClassName`，用作 OceanBase 的 Clog 目录，建议大小至少配置为 `memory` 大小的 3 倍以上。
 
-- `log`：Oceanbase 进程日志存储配置，可以指定大小和 `storageClassName`，用作 OceanBase 进程日志的存放目录，建议大小至少配置为 10Gi 以上。
+- `log`：OceanBase 进程日志存储配置，可以指定大小和 `storageClassName`，用作 OceanBase 进程日志的存放目录，建议大小至少配置为 10Gi 以上。
 
 - `obagent-conf-file`：OBAgent 配置文件目录存储配置，用来存放 OBAgent 配置文件，不需要配置特别大，一般配置大小为 1Gi 就可以。
 
