--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/1.administrator-guide-monitoring-and-alerts/1.use-ocp-to-monitor-databases/3.alerts/2.alert-subscription.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/1.administrator-guide-monitoring-and-alerts/1.use-ocp-to-monitor-databases/3.alerts/2.alert-subscription.md
@@ -46,7 +46,7 @@
    |------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
    | 告警来源 | 订阅的告警的来源。默认为 **OB** ，可切换为 **应用** 。  |
    | 订阅集群 | 选择需要订阅的集群。            |
-   | 告警项组 | 选择需要订阅的告警项组。在添加告警项时，可提前将需要关注的告警项加入到对应的告警项组中。 系统默认有 6 个初始化告警项组，默认告警项组的说明如下： ***dba** ：数据库管理员关注的告警项。* **dev** ：开发者关注的告警项。   ***oms** ：OMS 应用管理员关注的告警项。* **backup** ：备份恢复管理员需关注的告警项。   ***info** ：提醒信息，如运维操作结果提醒。* **ocp** ：OCP 基础模块告警项，如主机告警。    |
+   | 告警项组 | 选择需要订阅的告警项组。在添加告警项时，可提前将需要关注的告警项加入到对应的告警项组中。 系统默认有 6 个初始化告警项组，默认告警项组的说明如下： <ul><li>**dba** ：数据库管理员关注的告警项。</li><li>**dev** ：开发者关注的告警项。  </li><li>**oms** ：OMS 应用管理员关注的告警项。</li><li> **backup** ：备份恢复管理员需关注的告警项。 </li><li>**info** ：提醒信息，如运维操作结果提醒。</li><li>**ocp** ：OCP 基础模块告警项，如主机告警。</li></ul>    |
    | 告警方式 | 在需订阅的告警等级后勾选其通知的通道，订阅不支持群消息通道，故不在此展示群消息通道。 需至少订阅一个告警定级。       |
 
    ![新建订阅](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5345442261/p276892.png)
