--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/9.tenant-MEMStore-memory-full-troubleshooting.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/9.tenant-MEMStore-memory-full-troubleshooting.md
@@ -48,14 +48,14 @@ OBServer MEMStore 内存主要用于保存数据库租户增量数据。当 MEMS
 
      通过查询到 pkey 查询 `__all_virtual_table_mgr`，继续分析有 MEMStore 不释放的原因。
 
-     可以通过如下查询快速定位未释放的 MEMTable。
-     1. 查看有活跃事务或者引用计数不为 `0` 或者备机读时间戳小于快照点的 MEMTable。
+     可以通过如下查询快速定位未释放的 MemTable。
+     1. 查看有活跃事务或者引用计数不为 `0` 或者备机读时间戳小于快照点的 MemTable。
 
         ```unknow
         obclient> SELECT * FROM (SELECT A.svr_ip, A.table_id, A.partition_id, A.is_active, A.table_type, A.ref, A.write_ref, A.trx_count, A.base_version, A.multi_version_start, A.snapshot_version, B.min_log_service_ts, B.min_trans_service_ts, B.min_replay_engine_ts FROM (SELECT * FROM __all_virtual_table_mgr WHERE table_type=0 AND is_active =0 ) AS A join (SELECT * FROM __all_virtual_partition_info WHERE svr_ip='xxx.xxx.xx.xxx') AS B ON A.table_id = B.table_id AND A.partition_id=B.partition_idx AND A.svr_ip =B.svr_ip) AS C WHERE C.write_ref >0 OR C.trx_count >0 OR (C.snapshot_version > least(least(min_trans_service_ts, min_replay_engine_ts), min_log_service_ts));
         ```
 
-     2. 查看上一查询得到的 MEMTable 对应的分布区域的日志回收进度，确定是否存在日志回放不及时。
+     2. 查看上一查询得到的 MemTable 对应的分布区域的日志回收进度，确定是否存在日志回放不及时。
 
         ```unknow
         obclient> SELECT * FROM __all_virtual_partition_replay_status WHERE (table_id, partition_idx) IN (SELECT table_id, partition_id FROM (SELECT A.svr_ip, A.table_id, A.partition_id, A.is_active, A.table_type, A.ref, A.write_ref, A.trx_count,  A.base_version, A.multi_version_start, A.snapshot_version, B.min_log_service_ts, B.min_trans_service_ts, B.min_replay_engine_ts FROM (SELECT * FROM __all_virtual_table_mgr WHERE table_type=0 AND is_active =0 ) AS A JOIN (SELECT * FROM __all_virtual_partition_info WHERE svr_ip="xxx.xxx.xx.xx") AS B ON a.table_id = b.table_id AND A.partition_id=B.partition_idx AND A.svr_ip =B.svr_ip) AS C WHERE C.write_ref >0 or C.trx_count >0 OR (C.snapshot_version > least(least(min_trans_service_ts, min_replay_engine_ts), min_log_service_ts))) AND svr_ip='xxx.xxx.xx.xxx';
