--- a/zh-CN/15.oceanbase-database-overview/11.storage-architecture/3.minor-compaction-and-major-compaction/2.minor-compaction.md
+++ b/zh-CN/15.oceanbase-database-overview/11.storage-architecture/3.minor-compaction-and-major-compaction/2.minor-compaction.md
@@ -74,4 +74,4 @@ server_list:
     obclient> ALTER SYSTEM MINOR FREEZE ALTER PARTITION_ID = '8%1@1099511627933';
     ```
 
-需要注意的是，尽管允许只针对单个分区手动触发 Minor Freeze，但由于多个不同的分区可能共用相同的内存块，因此对单个分区的 Minor Freeze 可能并不能有效地释放内存，而针对租户的 Minor Freeze 可以有效地释放对应租户 MEMTable 的内存。
+需要注意的是，尽管允许只针对单个分区手动触发 Minor Freeze，但由于多个不同的分区可能共用相同的内存块，因此对单个分区的 Minor Freeze 可能并不能有效地释放内存，而针对租户的 Minor Freeze 可以有效地释放对应租户 MemTable 的内存。
