--- a/zh-CN/15.oceanbase-database-overview/7.distributed-database-objects/3.partitions-and-replicas/2.replica-types/2.full-featured-replicas.md
+++ b/zh-CN/15.oceanbase-database-overview/7.distributed-database-objects/3.partitions-and-replicas/2.replica-types/2.full-featured-replicas.md
@@ -18,7 +18,7 @@
 |----------------|-----------------------------|
 | 副本名称及缩写        | FULL(F)                     |
 | 是否有 Log        | 有，参与投票(SYNC_CLOG)           |
-| 是否有 MEMTable   | 有(WITH_MEMSTORE)            |
+| 是否有 MemTable   | 有(WITH_MEMSTORE)            |
 | 是否有 SSTable    | 有(WITH_SSSTORE)             |
 | 数据安全           | 高                           |
 | 恢复为 Leader 的时间 | 快                           |
