--- a/zh-CN/1.users-guide/9.performance-tuning-guide/7.case-analysis.md
+++ b/zh-CN/1.users-guide/9.performance-tuning-guide/7.case-analysis.md
@@ -401,7 +401,7 @@ MySQL [oceanbase]> show proxyconfig like '%server_routing_mode%';
 1 row in set (0.00 sec)
 ```
 
-上述场景作为一个案例进行分析，实际生成环境需要改成 Oceanbase 路由规则，即：请求默认路由到分区 Leader 所在的位置。
+上述场景作为一个案例进行分析，实际生成环境需要改成 OceanBase 路由规则，即：请求默认路由到分区 Leader 所在的位置。
 
 ### 慢 SQL 分析
 
