--- a/zh-CN/15.oceanbase-database-overview/11.storage-architecture/2.data-storage/2.memtable.md
+++ b/zh-CN/15.oceanbase-database-overview/11.storage-architecture/2.data-storage/2.memtable.md
@@ -1,6 +1,6 @@
-# MEMTable
+# MemTable
 
-## MEMTable 中的数据结构
+## MemTable 中的数据结构
 
 OceanBase 数据库的内存存储引擎 MemTable 由 BTree 和 Hashtable 组成，在插入/更新/删除数据时，数据被写入内存块，在 HashTable 和 BTree 中存储的均为指向对应数据的指针。
 
