--- a/zh-CN/15.oceanbase-database-overview/11.storage-architecture/2.data-storage/4.compression-and-encoding.md
+++ b/zh-CN/15.oceanbase-database-overview/11.storage-architecture/2.data-storage/4.compression-and-encoding.md
@@ -2,7 +2,7 @@
 
 数据库系统中普遍都会对数据进行不同程度的压缩来减小存储成本，一些面向 AP 的列存数据库的按列编码压缩还能够提高某些查询的性能。但对于大部分压缩算法，越高的压缩率也就意味着更复杂的计算和更慢的压缩/解压速度。在传统的 B 树存储结构下的数据库中，数据压缩可能会给数据写入带来 CPU 的计算压力，影响写入性能。但 OceanBase 数据库的 LSM-Tree 架构使数据的压缩只发生在 Compaction 阶段，不会影响数据的写入，同时也使能够使用压缩率更高的压缩方法，在一些客户的应用场景中也证明了 OceanBase 数据库在压缩能力上的优势。
 
-在 OceanBase 数据库中，当 MEMTable 占用内存空间大小达到一定阈值或每日合并时会触发转储/合并，MEMTable 中的数据落盘并合并成静态的 SSTable 数据。相对于 MEMTable，SSTable 中的数据量会更大，冷数据也相对更多。在合并不断产生新的 SSTable的过程中 OceanBase 数据库 会对 SSTable 中的数据进行压缩和编码，来节省数据在硬盘上的存储空间，同时减小对 SSTable 进行查询时产生的 IO。在 SSTable 中，数据是以块为单位来组织的，2Mb 定长的宏块方便对存储空间进行管理，宏块内部变长的微块则方便我们对数据进行压缩。微块有两种存储格式，flat 微块（未编码）和 encoding 微块（编码），OceanBase 数据库的数据压缩与编码都是在微块的粒度上进行的。对于一个 encoding 格式的微块，需要经历 填充行 \> 编码 \> 通用压缩（可选）\> 加密（可选）的流程后完成构建，成为最后落盘的数据块，并写入到定长的宏块中。这个流程中的编码和通用压缩就是 OceanBase 数据库对数据进行压缩的两种方式。
+在 OceanBase 数据库中，当 MemTable 占用内存空间大小达到一定阈值或每日合并时会触发转储/合并，MemTable 中的数据落盘并合并成静态的 SSTable 数据。相对于 MemTable，SSTable 中的数据量会更大，冷数据也相对更多。在合并不断产生新的 SSTable的过程中 OceanBase 数据库 会对 SSTable 中的数据进行压缩和编码，来节省数据在硬盘上的存储空间，同时减小对 SSTable 进行查询时产生的 IO。在 SSTable 中，数据是以块为单位来组织的，2Mb 定长的宏块方便对存储空间进行管理，宏块内部变长的微块则方便我们对数据进行压缩。微块有两种存储格式，flat 微块（未编码）和 encoding 微块（编码），OceanBase 数据库的数据压缩与编码都是在微块的粒度上进行的。对于一个 encoding 格式的微块，需要经历 填充行 \> 编码 \> 通用压缩（可选）\> 加密（可选）的流程后完成构建，成为最后落盘的数据块，并写入到定长的宏块中。这个流程中的编码和通用压缩就是 OceanBase 数据库对数据进行压缩的两种方式。
 
 ## 通用压缩
 
