--- a/zh-CN/15.oceanbase-database-overview/11.storage-architecture/3.minor-compaction-and-major-compaction/3.major-compaction.md
+++ b/zh-CN/15.oceanbase-database-overview/11.storage-architecture/3.minor-compaction-and-major-compaction/3.major-compaction.md
@@ -7,7 +7,7 @@
 |                          转储（Minor Compaction）                           |                    合并（Major Compaction）                     |
 |-------------------------------------------------------------------------|-------------------------------------------------------------|
 | Partition 或者租户级别，只是 MemTable 的物化。                                       | 全局级别，产生一个全局快照。                                              |
-| 每个 OBServer 的每个租户独立决定自己 MemTable 的冻结操作，主备分区不保持一致。                       | 全局分区一起做 MEMTable 的冻结操作，要求主备 Partition 保持一致，在合并时会对数据进行一致性校验。 |
+| 每个 OBServer 的每个租户独立决定自己 MemTable 的冻结操作，主备分区不保持一致。                       | 全局分区一起做 MemTable 的冻结操作，要求主备 Partition 保持一致，在合并时会对数据进行一致性校验。 |
 | 可能包含多个不同版本的数据行。                                                         | 只包含快照点的版本行。                                                 |
 | 转储只与相同大版本的 Minor SSTable 合并，产生新的 Minor SSTable，所以只包含增量数据，最终被删除的行需要特殊标记。 | 合并会把当前大版本的 SSTable 和 MemTable 与前一个大版本的全量静态数据进行合并，产生新的全量数据。  |
 
