--- a/zh-CN/15.oceanbase-database-overview/11.storage-architecture/6.storage-architecture-data-integrity/1.silent-data-corruption.md
+++ b/zh-CN/15.oceanbase-database-overview/11.storage-architecture/6.storage-architecture-data-integrity/1.silent-data-corruption.md
@@ -6,7 +6,7 @@
 
 ## OceanBase 数据库如何防范磁盘静默错误
 
-OceanBase 数据库存放在磁盘中数据包括两部分，第一部分是 RedoLog，即事务日志，RedoLog 经过回放后会构成内存中的 MEMTable。第二部分是 SSTable，即 LSM-Tree 中的静态数据。MEMTable 和 SSTable 共同组成用户数据的一个副本。
+OceanBase 数据库存放在磁盘中数据包括两部分，第一部分是 RedoLog，即事务日志，RedoLog 经过回放后会构成内存中的 MemTable。第二部分是 SSTable，即 LSM-Tree 中的静态数据。MemTable 和 SSTable 共同组成用户数据的一个副本。
 
 ## 多副本机制
 
