--- a/zh-CN/15.oceanbase-database-overview/7.distributed-database-objects/3.partitions-and-replicas/2.replica-types/1.overview-of-replicas.md
+++ b/zh-CN/15.oceanbase-database-overview/7.distributed-database-objects/3.partitions-and-replicas/2.replica-types/1.overview-of-replicas.md
@@ -1,6 +1,6 @@
 # 分区副本概述
 
-为了数据安全和提供高可用的数据服务，每个分区数据在物理上存储多份，每一份叫做分区的一个副本。每个副本，包括存储在磁盘上的静态数据（SSTable）、存储在内存的增量数据（MEMTable）、以及记录事务的日志三类主要的数据。根据存储数据种类的不同，副本有几种不同的类型，以支持不同业务在数据安全、性能伸缩性、可用性、成本等之间的选择。
+为了数据安全和提供高可用的数据服务，每个分区数据在物理上存储多份，每一份叫做分区的一个副本。每个副本，包括存储在磁盘上的静态数据（SSTable）、存储在内存的增量数据（MemTable）、以及记录事务的日志三类主要的数据。根据存储数据种类的不同，副本有几种不同的类型，以支持不同业务在数据安全、性能伸缩性、可用性、成本等之间的选择。
 
 目前 社区版 OceanBase 数据库支持以下三种类型的副本：
 
