--- a/zh-CN/1.users-guide/3.installation-and-deployment/15.deploy-oceanbase-database-in-the-production-environment.md
+++ b/zh-CN/1.users-guide/3.installation-and-deployment/15.deploy-oceanbase-database-in-the-production-environment.md
@@ -14,7 +14,7 @@
   
 * OBD
 
-  OceanBase Deployer，OceanBase 开源软件的安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档](https://www.oceanbase.com/docs/community-obd-cn-10000000001690019)。
+  OceanBase Deployer，OceanBase 集群安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档](https://www.oceanbase.com/docs/community-obd-cn-10000000001690019)。
   
 * ODP
 
