--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/12.audit.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/12.audit.md
@@ -171,7 +171,7 @@ object_operation:
   Bye
   
   [admin@**** /home/admin]
-  $obclient -h10.10.10.10 -P2883 -uORAAU****R@MySQL#test -pORAAUDITOR
+  $obclient -h10.XXX.XXX.XXX -P2883 -uORAAU****R@MySQL#test -pORAAUDITOR
   
   obclient> AUDIT TABLE BY test WHENEVER SUCCESSFUL;
   Query OK, 0 rows affected
