修改 10.session_user.md

--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/6.information-functions/10.session_user.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/6.information-functions/10.session_user.md
@@ -19,7 +19,7 @@ obclient> SELECT SESSION_USER();
 +---------------------+
 | SESSION_USER()      |
 +---------------------+
-| root@100.0.0.1 |
+| root@100.XXX.XXX.XXX |
 +---------------------+
 1 row in set
 ```
