修改 4.inet_aton.md

--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/4.inet_aton.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/4.inet_aton.md
@@ -17,9 +17,9 @@ INET_ATON(expr)
 ## 示例
 
 ```sql
-obclient> SELECT INET_ATON('1.1.1.1');
+obclient> SELECT INET_ATON('10.XXX.XXX.XXX');
 +----------------------+
-|  INET_ATON('1.1.1.1') |
+|  INET_ATON('10.XXX.XXX.XXX') |
 +----------------------+
 |             16843009 |
 +----------------------+
