--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/6.inet6_aton.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/6.inet6_aton.md
@@ -20,11 +20,11 @@ INET6_ATON(expr)
 
 * 仅支持使用无类地址表示 IPv4 地址的值。诸如 198.51.1 之类的有类地址会被拒绝。
 
-* 不允许在尾部使用端口号，例如 198.51.100.2:8082。
+* 不允许在尾部使用端口号，例如 198.XXX.XXX.XXX:8082。
 
 * 地址中不允许使用十六进制数字，例如 198.0xa0.1.2。
 
-* 不支持八进制数：198.51.100.010 被视为 198.51.100.10，而不是 198.51.100.8。
+* 不支持八进制数：198.XXX.XXX.010 被视为 198.XXX.XXX.10，而不是 198.XXX.XXX.8。
 
 这些 IPv4 限制也适用于具有 IPv4 地址部分的 IPv6 地址，例如 IPv4 兼容地址或 IPv4 映射地址。
 
