修改 11.is_ipv4_mapped.md

--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/11.is_ipv4_mapped.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/11.is_ipv4_mapped.md
@@ -13,11 +13,11 @@ IS_IPV4_MAPPED(expr)
 ## 示例
 
 ```sql
-obclient> SELECT IS_IPV4_MAPPED(INET6_ATON('::10.0.5.9'));
+obclient> SELECT IS_IPV4_MAPPED(INET6_ATON('::10.XXX.XXX.9'));
 +------------------------------------------------+
-|   IS_IPV4_MAPPED(INET6_ATON('::10.0.5.9'))|
+|   IS_IPV4_MAPPED(INET6_ATON('::10.XXX.XXX.9'))|
 +------------------------------------------------+
-|                                                                     0 |
+|                                               0 |
 +------------------------------------------------+
 1 row in set
 ```
