修改 10.is_ipv4_compat.md

--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/10.is_ipv4_compat.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/10.is_ipv4_compat.md
@@ -15,17 +15,17 @@ IS_IPV4_COMPAT(expr)
 ## 示例
 
 ```sql
-obclient> SELECT IS_IPV4_COMPAT(INET6_ATON('::10.0.5.7'));
+obclient> SELECT IS_IPV4_COMPAT(INET6_ATON('::10.XXX.XXX.7'));
 +------------------------------------------+
-| IS_IPV4_COMPAT(INET6_ATON('::10.0.5.7')) |
+| IS_IPV4_COMPAT(INET6_ATON('::10.XXX.XXX.7')) |
 +------------------------------------------+
 |                                        1 |
 +------------------------------------------+
 1 row in set
 
-obclient> SELECT HEX(INET6_ATON('198.51.100.1'));
+obclient> SELECT HEX(INET6_ATON('198.XXX.XXX.1'));
 +---------------------------------+
-| HEX(INET6_ATON('198.51.100.1')) |
+| HEX(INET6_ATON('198.XXX.XXX.1')) |
 +---------------------------------+
 | C6336501                        |
 +---------------------------------+
