--- a/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/10.view-cluster-resources.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/10.view-cluster-resources.md
@@ -32,7 +32,7 @@ OCP 提供了资源管理功能，管理员可以通过该功能查看集群内 
 
   * 如何进行手动负载迁移：
 
-    当 OceanBase 集群自带的负载均衡算法无法满足用户需求的时候，可以通过双击租户后的 UNIT 规格进行资源的迁移操作，迁移只能在单个 Zone 内进行。
+    当 OceanBase 集群自带的负载均衡算法无法满足用户需求的时候，可以通过双击租户后的 Unit 规格进行资源的迁移操作，迁移只能在单个 Zone 内进行。
     >**说明**
     >
     >手动进行负载均衡时，建议关闭 OceanBase 集群的自动负载功能。OceanBase 集群的负载均衡可能会影响当前用户设定，将 Unit 迁回原来的位置。
