--- a/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-delete-zones.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/2.add-or-delete-zones.md
@@ -48,7 +48,7 @@ ALTER SYSTEM {ADD|DELETE} ZONE zone_name;
 
   如果该集群未加入到 OCP 中进行管理，请联系管理员将待操作的集群接管到当前 OCP 中，具体操作方法请参见 OCP 对应版本的《用户指南》文档中的 **接管集群** 。
   
-* 在增加 zone 前，请确认当前登录用户已具备集群的管理权限。
+* 在增加 Zone 前，请确认当前登录用户已具备集群的管理权限。
 
   如果当前用户没有集群管理的权限，请联系管理员为您添加相应权限的角色，具体操作方法请参见 OCP 对应版本的《用户指南》文档中的 **编辑用户** 。
   
@@ -98,7 +98,7 @@ ALTER SYSTEM {ADD|DELETE} ZONE zone_name;
 
 ### 前提条件
 
-* 在删除 zone 前，请确认当前登录用户具备集群的管理权限。如果当前用户没有集群管理的权限，请联系管理员为您添加相应权限的角色，具体操作方法请参见 OCP 对应版本的《用户指南》文档中的 **编辑用户** 。
+* 在删除 Zone 前，请确认当前登录用户具备集群的管理权限。如果当前用户没有集群管理的权限，请联系管理员为您添加相应权限的角色，具体操作方法请参见 OCP 对应版本的《用户指南》文档中的 **编辑用户** 。
 
 * 在删除 Zone 前，需要保证该 Zone 下已不存在 OBServer，否则将会导致删除失败。
 
