--- a/zh-CN/1.users-guide/6.basic-database-management/4.manage-tenants/2.create-a-tenant.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/4.manage-tenants/2.create-a-tenant.md
@@ -134,13 +134,13 @@ opt_set_sys_var:
 
    1. 为 z1、z2 和 z3 设置副本类型、Unit 规格和 Unit 数量。
 
-      集群选定后，页面会根据所选集群的 zone 信息给出可配置的 zone 列表；对于无需做副本分布的 zone，可以通过最右侧的按钮删除该zone条目。
+      集群选定后，页面会根据所选集群的 Zone 信息给出可配置的 Zone 列表；对于无需做副本分布的 Zone，可以通过最右侧的按钮删除该 Zone 条目。
 
       * 副本类型支持全功能型副本、只读型副本和日志型副本。
 
       * OCP 内置了一套 Unit 规格；另外也可以在下拉列表的最下方点击按钮新增自定义规格。
 
-      * 指定该 zone下的 Unit 数量。需要注意的是，unit 数量不能超过该 zone下 server个数。
+      * 指定该 Zone 下的 Unit 数量。需要注意的是，unit 数量不能超过该 Zone 下 server个数。
 
          ![09091452](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1360562361/p325168.png)
 
