--- a/zh-CN/1.users-guide/6.basic-database-management/8.manage-processes/2.multi-tenant-threads-of-oceanbase-database.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/8.manage-processes/2.multi-tenant-threads-of-oceanbase-database.md
@@ -2,7 +2,7 @@
 
 本文主要介绍了 OceanBase 数据库多租户线程的实现原理。
 
-OceanBase 数据库是一个支持多租户架构的分布式数据库。当 OBServer 在处理来自不同租户的请求时，需要依靠租户独有的线程进行请求处理，最终返回给客户端（例如，OBClient 或者是由应用端通过 OBProxy 返回的结果）。在这个过程中，OceanBase 数据库的后台系统线程运行着系统任务和多租户共享任务。所有线程的健康运行为 OBServer 的稳定运行以及可靠高可用的数据服务提供基础支撑。为了便于解释 OceanBase 数据库是如何在多租户线程架构下进行请求处理的，我们对 OBServer 收到的三类基本的租户请求进行了详细地介绍。
+OceanBase 数据库是一个支持多租户架构的分布式数据库。当 OBServer 在处理来自不同租户的请求时，需要依靠租户独有的线程进行请求处理，最终返回给客户端（例如，OBClient 或者是由应用端通过 ODP 返回的结果）。在这个过程中，OceanBase 数据库的后台系统线程运行着系统任务和多租户共享任务。所有线程的健康运行为 OBServer 的稳定运行以及可靠高可用的数据服务提供基础支撑。为了便于解释 OceanBase 数据库是如何在多租户线程架构下进行请求处理的，我们对 OBServer 收到的三类基本的租户请求进行了详细地介绍。
 
 ## 使用场景
 
