--- a/zh-CN/15.oceanbase-database-overview/15.appendix-basic-concepts-of-oceanbase-database.md
+++ b/zh-CN/15.oceanbase-database-overview/15.appendix-basic-concepts-of-oceanbase-database.md
@@ -522,11 +522,7 @@ OceanBase 数据库的 DDL 操作对系统对象的变更都发生在 Root Serve
 
 * 副本类型（replicas）：例如， F 表示全功能副本；L 表示日志型副本。
 
-<!-- -->
-
-* 位置（location）：位置是系统已知的一组枚举值。位置是zone的名称，如hz1, bj2等。
-
-<!-- -->
+* 位置（location）：位置是系统已知的一组枚举值。位置是 Zone 的名称，如hz1, bj2等。
 
 * 量词：不指定量词时，表示一个副本；用 `{n}` 表示 n 个副本。有一种特殊的量词` {all_server} `表示副本数和可用的 Server 数相同。目前，由于一些实现上的考虑，一个分区在一个 Zone 中最多有一个全功能或日志型副本（这些类型的副本是 Paxos 复制组的成员），只读型副本在同一个 Zone 可以有多个。
 
