--- a/zh-CN/18.supporting-tools/2.ob-agent/7.query-expressions-for-general-metrics.md
+++ b/zh-CN/18.supporting-tools/2.ob-agent/7.query-expressions-for-general-metrics.md
@@ -9,7 +9,7 @@
 
 |  **指标**  | **表达式**  | **单位** |
 |------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------|
-| 活跃 MEMStore 大小  | `sum(ob_sysstat{stat_id="130000",@LABELS}) by (@GBLABELS) / 1048576`  | MB     |
+| 活跃 MemStore 大小  | `sum(ob_sysstat{stat_id="130000",@LABELS}) by (@GBLABELS) / 1048576`  | MB     |
 | 当前活跃会话数  | `sum(ob_active_session_num{@LABELS}) by ([@GBLABELS)` | - |
 | 块缓存命中率 | `100 * 1 / (1 + sum(rate(ob_sysstat{stat_id="50009",@LABELS}[@INTERVAL])) by ([@GBLABELS) ](/GBLABELS)) / sum(rate(ob_sysstat{stat_id="50008",@LABELS}[@INTERVAL])) by (@GBLABELS))`   | % |
 | 块缓存大小  | `sum(ob_cache_size_bytes{cache_name="user_block_cache",@LABELS}) by ([@GBLABELS) ](/GBLABELS)) / 1048576`   | MB     |
@@ -38,8 +38,8 @@
 | 内核 Buffer Cache 大小     | `avg(node_memory_Buffers_bytes{@LABELS}) by (@GBLABELS) / 1073741824` | GB     |
 | 可用物理内存大小 | `avg(node_memory_MemFree_bytes{@LABELS}) by (@GBLABELS) / 1073741824` | GB     |
 | 使用物理内存大小 | `(avg(node_memory_MemTotal_bytes{@LABELS}) by (@GBLABELS)` `avg(node_memory_MemFree_bytes{@LABELS}) by (@GBLABELS)` `avg(node_memory_Cached_bytes{@LABELS}) by (@GBLABELS)` `avg(node_memory_Buffers_bytes{@LABELS}) by (@GBLABELS)) / 1073741824`   | GB     |
-| MEMStore 的上限  | `sum(ob_sysstat{stat_id="130004",@LABELS}) by (@GBLABELS) / 1048576`  | MB     |
-| MEMStore 使用百分比  | `100 * sum(ob_sysstat{stat_id="130001",@LABELS}) by (@GBLABELS) / sum(ob_sysstat{stat_id="130004",@LABELS}) by (@GBLABELS)`    | % |
+| MemStore 的上限  | `sum(ob_sysstat{stat_id="130004",@LABELS}) by (@GBLABELS) / 1048576`  | MB     |
+| MemStore 使用百分比  | `100 * sum(ob_sysstat{stat_id="130001",@LABELS}) by (@GBLABELS) / sum(ob_sysstat{stat_id="130004",@LABELS}) by (@GBLABELS)`    | % |
 | 写锁等待失败次数 | `sum(rate(ob_sysstat{stat_id="60022",@LABELS}[@INTERVAL])) by (@GBLABELS)` | 次/s    |
 | 写锁等待成功次数 | `sum(rate(ob_sysstat{stat_id="60021",@LABELS}[@INTERVAL])) by (@GBLABELS)` | 次/s    |
 | 写锁平均等待耗时 | `sum(rate(ob_sysstat{stat_id="60023",@LABELS}[@INTERVAL])) by (@GBLABELS) / (sum(rate(ob_sysstat{stat_id="60021",@LABELS}[@INTERVAL])) by (@GBLABELS) + sum(rate(ob_sysstat{stat_id="60022",@LABELS}[@INTERVAL])) by (@GBLABELS))`   | us     |
@@ -73,7 +73,7 @@
 | 每秒处理 Update 语句数 | `sum(rate(ob_sysstat{stat_id="40006",@LABELS}[@INTERVAL])) by (@GBLABELS)` | 次/s    |
 | 服务端每条 Update 语句平均处理耗时  | `sum(rate(ob_sysstat{stat_id="40007",@LABELS}[@INTERVAL])) by (@GBLABELS) / sum(rate(ob_sysstat{stat_id="40006",@LABELS}[@INTERVAL])) by (@GBLABELS)` | us     |
 | 表数量 | `max(ob_table_num{@LABELS}) by (@GBLABELS)`  | - |
-| MEMStore 总大小  | `sum(ob_sysstat{stat_id="130001",@LABELS}) by (@GBLABELS) / 1048576`  | MB     |
+| MemStore 总大小  | `sum(ob_sysstat{stat_id="130001",@LABELS}) by (@GBLABELS) / 1048576`  | MB     |
 | 每秒处理事务数  | `sum(rate(ob_sysstat{stat_id="30005",@LABELS}[@INTERVAL])) by (@GBLABELS)` | 次/s    |
 | 服务端每个事务平均处理耗时 | `sum(rate(ob_sysstat{stat_id="30006",@LABELS}[@INTERVAL])) by (@GBLABELS) / sum(rate(ob_sysstat{stat_id="30005",@LABELS}[@INTERVAL])) by (@GBLABELS)` | us     |
 | 每秒提交的事务日志数    | `sum(rate(ob_sysstat{stat_id="30002",@LABELS}[@INTERVAL])) by (@GBLABELS)` | 次/s    |
