--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in/4.use-obd-cluster-expansion.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in/4.use-obd-cluster-expansion.md
@@ -14,13 +14,13 @@
 
 该阶段并非集群扩容必要操作，主要为 **集群扩容** 第 7 步业务租户扩容所准备。
 
-1. 使用 root 用户连接 OceanBase 数据库的 sys 租户
+1. 使用 root 用户连接 OceanBase 数据库的 sys 租户。
 
    ```sql
    obclient -h 10.10.10.1 -uroot@sys -P2881 -A -c
    ```
 
-2. 创建一个普通租户，语句如下
+2. 创建一个普通租户，语句如下。
 
    ```bash
    obd cluster tenant create <deploy name> [-n <tenant name>] [flags]
@@ -61,7 +61,7 @@
 
 ## 集群扩容
 
-1. 创建一份新的配置文件，配置文件可参考 [test2.yaml](https://github.com/Xjxjy/scale-out-oceanbase-cluster/blob/main/amber2.yaml)；
+1. 创建一份新的配置文件，配置文件可参考 [test2.yaml](https://github.com/Xjxjy/scale-out-oceanbase-cluster/blob/main/amber2.yaml)。
 
    ```sqlbash
    vim  test2.yaml
@@ -71,7 +71,7 @@
    >
    >由于是同一机器，不同端口上创建，因此新建配置文件需要修改 Server 的编号、安装路径和端口号，不能与现有进程重复。
 
-2. 使用 OBD 进行部署新集群
+2. 使用 OBD 进行部署新集群。
 
    ```bash
    obd cluster deploy test2 -c test2.yaml
@@ -81,9 +81,9 @@
    >
    > test2 为部署配置名称，用户可根据实际情况自定义命名。
 
-3. 把新的配置文件复制到原本的配置文件中
+3. 把新的配置文件复制到原本的配置文件中。
 
-   1. 查看原配置文件路径
+   1. 查看原配置文件路径。
 
       ```bash
       obd cluster list;
@@ -97,7 +97,7 @@
       +-------------+--------------------------------+-----------------+
       ```
 
-   2. 根据原配置文件路径，找到原配置文件 `config.yaml`  , 打开原配置文件，将新配置文件的内容复制到原配置文件中，复制后的配置文件可参考 [配置文件](https://github.com/Xjxjy/scale-out-oceanbase-cluster/blob/main/amber3.yaml)
+   2. 根据原配置文件路径，找到原配置文件 `config.yaml`  , 打开原配置文件，将新配置文件的内容复制到原配置文件中，复制后的配置文件可参考 [配置文件](https://github.com/Xjxjy/scale-out-oceanbase-cluster/blob/main/amber3.yaml)。
 
       ```bash
       vim .obd/cluster/amber/config.yaml
@@ -107,13 +107,13 @@
       >
       > 新配置一定要放在对应原配置内容下面。
 
-4. 再次启动集群
+4. 再次启动集群。
 
    ```bash
    obd cluster start amber
    ```
 
-5. 重新连接  OceanBase 数据库，添加新的进程
+5. 重新连接  OceanBase 数据库，添加新的进程。
 
     ```sql
    ALTER SYSTEM ADD SERVER 'server_ip:port_num' ZONE 'zone1';
@@ -125,7 +125,7 @@
    >
    > port_num： 对应的端口号
 
-6. 查看扩容结果
+6. 查看扩容结果。
 
    ```sql
    select svr_ip,id,zone,status from __all_server;
@@ -144,10 +144,11 @@
 
    返回结果中可以看到每个 Zone 内都存在两个进程，则表示扩容成功。
 
-7. 为业务租户扩容
+7. 为业务租户扩容。
+
+   执行此命令，添加 Unit 数量。
 
    ```sql
-   # 执行此命令，添加 UNIT 数量
    MySQL [oceanbase]> alter resource pool amber_babe_pool unit_num=2;
    Query OK, 0 rows affected (0.146 sec)
    ```
