--- a/zh-CN/1.users-guide/6.basic-database-management/2.configuration-management/4.recommended-general-system-configuration-parameters.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/2.configuration-management/4.recommended-general-system-configuration-parameters.md
@@ -28,7 +28,7 @@
     obclient> ALTER SYSTEM SET system_memory='30G';
     ```
 
-* rootservice_memory_limit：用于设置 RootService 的最大内存容量限制。
+* rootservice_memory_limit：用于设置 Root Service 的最大内存容量限制。
 
   * 默认值：2G
 
@@ -88,7 +88,7 @@
     obclient> ALTER SYSTEM major_compact_trigger=5;
     ```
 
-* memstore_limit_percentage：用于设置租户使用 MEMStore 的内存占其总可用内存的百分比。
+* memstore_limit_percentage：用于设置租户使用 MemStore 的内存占其总可用内存的百分比。
 
   * 默认值：50
 
