--- a/zh-CN/1.users-guide/6.basic-database-management/2.configuration-management/5.recommended-configurations-of-default-production-parameters.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/2.configuration-management/5.recommended-configurations-of-default-production-parameters.md
@@ -32,7 +32,7 @@
     obclient> ALTER SYSTEM SET system_memory='30G';
     ```
 
-* rootservice_memory_limit：用于设置 RootService 的最大内存容量限制。
+* rootservice_memory_limit：用于设置 Root Service 的最大内存容量限制。
 
   * 推荐值：2G
 
@@ -92,7 +92,7 @@
     obclient> ALTER SYSTEM SET major_compact_trigger=50;
     ```
 
-* memstore_limit_percentage：用于设置租户使用 MEMStore 的内存占其总可用内存的百分比。
+* memstore_limit_percentage：用于设置租户使用 MemStore 的内存占其总可用内存的百分比。
 
   * 推荐值：80
 
