--- a/zh-CN/18.supporting-tools/8.hbaseapi/4.use-of-ttl.md
+++ b/zh-CN/18.supporting-tools/8.hbaseapi/4.use-of-ttl.md
@@ -52,7 +52,7 @@ ALTER TABLE htable1$family1 comment='{"HColumnDescriptor": {"TimeToLive": 6, "Ma
 
 ## 使用说明
 
-由于 OceanBase 数据库使用了 LSM Tree 架构（删除也是一个追加写的操作），即使通过 TTL 任务删除了过期数据，实际存储空间不仅有可能不降低，而且还可能增加，而最终存储空间的释放还是需要依靠 Major Compaction，因此建议配合 major freeze 同时使用，在 TTL 任务删除完成之后执行 major freeze，例如，可以通过设置 major_freeze_duty_time 在 kv_ttl_duty_duration 之后实现。
+由于 OceanBase 数据库使用了 LSM-Tree 架构（删除也是一个追加写的操作），即使通过 TTL 任务删除了过期数据，实际存储空间不仅有可能不降低，而且还可能增加，而最终存储空间的释放还是需要依靠 Major Compaction，因此建议配合 major freeze 同时使用，在 TTL 任务删除完成之后执行 major freeze，例如，可以通过设置 major_freeze_duty_time 在 kv_ttl_duty_duration 之后实现。
 
 TTL 过期删除任务是一个后台低优先级任务，暂无法保证过期立即删除的能力，为了不对系统的性能造成较大影响，在任务的执行过程中如果遇到 memstore 内存 total_memstore_used 超过阈值 major_freeze_trigger（可以通过虚拟表 __all_virtual_tenant_memstore_info 或者视图 gv$memstore 查看）的情况，会暂停当前任务的执行直到内存降低到阈值以下。同时，为了不影响系统的恢复流程，对于正常进行物理恢复的租户，TTL 任务同样也会暂停该租户 TTL 任务的执行，直到租户完成恢复。
 
