修改 17.ip2int.md

--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/2.single-row-functions/2.string-functions/17.ip2int.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/2.single-row-functions/2.string-functions/17.ip2int.md
@@ -12,19 +12,19 @@ IP2INT('ip_addr')
 
 假设输入的 IP 形如 `s1.s2.s3.s4`，则返回值的计算规则为：
 
-`s1` \* 2^24^ + `s2` \* 2^16^ + `s3` \* 2^8^+ `s4`
+`s1` \* 2<sup>24</sup> + `s2` \* 2<sup>16</sup> + `s3` \* 2<sup>8</sup>+ `s4`
 
 ## 示例
 
 ```sql
 obclient> SELECT
-     IP2INT('0.0.0.1'),
-     HEX(IP2INT('0.0.0.1')),
-     HEX(IP2INT('1.0.0.0'))
+     IP2INT('0.X.X.1'),
+     HEX(IP2INT('0.X.X.1')),
+     HEX(IP2INT('1.X.X.0'))
      \G
 *************************** 1. row ***************************
-     IP2INT('0.0.0.1'): 1
-HEX(IP2INT('0.0.0.1')): 1
-HEX(IP2INT('1.0.0.0')): 1000000
+     IP2INT('0.X.X.1'): 1
+HEX(IP2INT('0.X.X.1')): 1
+HEX(IP2INT('1.X.X.0')): 1000000
 1 row in set
 ```
