--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/2.single-row-functions/2.string-functions/16.int2ip.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/2.single-row-functions/2.string-functions/16.int2ip.md
@@ -31,8 +31,8 @@ obclient> SELECT
      INT2IP(1)
      \G
 *************************** 1. row ***************************
-INT2IP(16777216): 1.0.0.0
+INT2IP(16777216): 1.X.X.0
    HEX(16777216): 1000000
-       INT2IP(1): 0.0.0.1
+       INT2IP(1): 0.X.X.1
 1 row in set
 ```
