--- a/zh-CN/1.users-guide/9.performance-tuning-guide/5.sql-tuning-guide/4.sql-tuning/3.monitor-the-sql-execution-performance/4.examples-of-sql-performance-analysis/7.find-the-top-n-sql-queries.md
+++ b/zh-CN/1.users-guide/9.performance-tuning-guide/5.sql-tuning-guide/4.sql-tuning/3.monitor-the-sql-execution-performance/4.examples-of-sql-performance-analysis/7.find-the-top-n-sql-queries.md
@@ -68,19 +68,19 @@ obclient>SELECT/*+ PARALLEL(15)*/avg_exe_usec, svr_ip, svr_port, sql_id, plan_id
 
 *************************** 1. row ***************************
 avg_exe_usec: 9795912
-      svr_ip: 10.183.76.140
+      svr_ip: 10.XXX.XXX.140
     svr_port: 2882
       sql_id: C5D91E6C772D1B87C32BB3C9ED1435E1
      plan_id: 4668689
 *************************** 2. row ***************************
 avg_exe_usec: 9435052
-      svr_ip: 10.103.229.107
+      svr_ip: 10.XXX.XXX.107
     svr_port: 2882
       sql_id: 3B6EFEEC8332EB2A0822A3EA7B769500
      plan_id: 4692858
 *************************** 3. row ***************************
 avg_exe_usec: 9335002
-      svr_ip: 11.180.xx.xx
+      svr_ip: 11.XXX.XXX.118
     svr_port: 2882
       sql_id: 3B6EFEEC8332EB2A0822A3EA7B769500
      plan_id: 4683085
