--- a/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/6.inet6_aton.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/3.functions/8.other-functions/6.inet6_aton.md
@@ -16,7 +16,7 @@ INET6_ATON(expr)
 
 * 不允许在尾部使用 Zone ID，例如 fc50::3%1 或 fc50::3%eth1。
 
-* 不允许在尾部使用网络掩码，如 2002:45f:3:ba::/64 或 198.51.100.0/24。
+* 不允许在尾部使用网络掩码，如 2002:45f:3:ba::/64 或 198.XXX.XXX.0/24。
 
 * 仅支持使用无类地址表示 IPv4 地址的值。诸如 198.51.1 之类的有类地址会被拒绝。
 
