--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/65.show.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/65.show.md
@@ -65,7 +65,7 @@ opt_for_grant_user:
 | COLLATION     | 展示支持的字符序。     |
 | PARAMETERS [like_or_where_clause] tenant_name   | 展示系统配置项。      |
 | {INDEX \| INDEXES \| KEYS} {FROM \| IN} rel_name [{FROM \| IN} database_name] | 展示关系 `rel_name` 上的索引或键。   |
-| [FULL] PROCESS LIST     | 展示当前的会话及其状态。 `FULL` 关键字用于展示连接的 IP 地址、端口号与 OBProxy 的会话 ID。 |
+| [FULL] PROCESS LIST     | 展示当前的会话及其状态。 `FULL` 关键字用于展示连接的 IP 地址、端口号与 ODP 的会话 ID。 |
 | TABLEGROUPS   | 展示表组信息。 |
 | {GLOBAL \| SESSION \| LOCAL} STATUS   | 展示会话的状态。      |
 | TENANT [STATUS]   | 展示当前的租户名。 `STATUS` 关键字用于展示租户的读写状态。      |
