修改 45.load-data.md

--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/45.load-data.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/45.load-data.md
@@ -10,9 +10,9 @@
 
 1. 解析文件：OceanBase 数据库会根据用户输入的文件名，读取文件中的数据，并且根据指定的并行度来决定并行或者串行解析输入文件中的数据。
 
-2. 分发数据：由于 OceanBase 是分布式数据库，各个分区的数据可能分布在各个不同的 OBServer，`LOAD DATA` 会对解析出来的数据进行计算，决定数据需要被发送到哪个 OBServer。
+2. 分发数据：由于 OceanBase 是分布式数据库，各个分区的数据可能分布在各个不同的 OBServer，`LOAD DATA` 会对解析出来的数据进行计算，决定数据需要被发送到哪个 OBServer 节点。
 
-3. 插入数据：当目标 OBServer 收到数据后，在本地执行 `INSERT` 操作将数据插入到对应的分区当中。
+3. 插入数据：当目标 OBServer 节点收到数据后，在本地执行 `INSERT` 操作将数据插入到对应的分区当中。
 
 要从外部文件导入数据，您需要具有 `FILE` 权限。
 
@@ -48,7 +48,7 @@ LOAD DATA
 |----------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | parallel(N)        | 加载数据的并行度，`N` 默认为 `4`。             |
 | load_batch_size(M) | 指定每次插入的批量大小，`M` 默认为 `1000`。推荐取值范围为 [100,1000]。              |
-| file_name          | 定输入文件的路径和文件名，目前仅支持从 OBServer 本地加载文件。            |
+| file_name          | 定输入文件的路径和文件名，目前仅支持从 OBServer 节点本地加载文件。            |
 | REPLACE \| IGNORE  | 如果遇到唯一键冲突，`REPLACE` 表示覆盖冲突行，`IGNORE` 表示忽略冲突行。 `LOAD DATA` 通过表的主键来判断数据是否重复，如果表不存在主键，则 `REPLACE` 与 `IGNORE` 选项没有区别。缺省时，遇到重复数据的时候，`LOAD DATA` 会将出现错误的数据记录到日志文件中。 |
 | table_name         | 导入数据的表的名称，支持分区表与非分区表。             |
 | FIELDS \| COLUMNS  | 指定字段的格式。 <ul><li>`ENCLOSED BY`：设置导出值的修饰符。</li><li> `TERMINATED BY`：设置导出列的结束符。   </li><li> `ESCAPED BY`：设置导出值忽略的字符。 </li></ul>  |
