--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/1.administrator-guide-monitoring-and-alerts/1.use-ocp-to-monitor-databases/3.alerts/5.description-of-common-alarm-items.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/1.administrator-guide-monitoring-and-alerts/1.use-ocp-to-monitor-databases/3.alerts/5.description-of-common-alarm-items.md
@@ -5,7 +5,7 @@
 |                     告警项名称                      |                说明                |                                                         触发条件                                                          | 告警范围  |
 |------------------------------------------------|----------------------------------|-----------------------------------------------------------------------------------------------------------------------|-------|
 | os_observer_core_dump                          | OBServer Core Dump               | \[\< 1200，严重\]                                                                                                        | 服务器   |
-| os_observer_not_exist                          | OBServer 进程不存在                   | \[== 0，严重\]                                                                                                           | 服务器   |
+| os_observer_not_exist                          | observer 进程不存在                   | \[== 0，严重\]                                                                                                           | 服务器   |
 | os_tsar_nvme_ioawait                           | OBServer NVMe 磁盘 ioawait 高       | \[\> 20，严重\]                                                                                                          | 服务器   |
 | os_tsar_sda_ioawait                            | OBServer 磁盘 ioawait 过高           | \[\>= 200，严重\]                                                                                                        | 服务器   |
 | os_kernel_io_hang                              | OBServer I/O Hang                | \[\>= 99，严重\]                                                                                                         | 服务器   |
