--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in/4.use-obd-cluster-expansion.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in/4.use-obd-cluster-expansion.md
@@ -4,7 +4,7 @@
 
 ## 概述
 
-在通过使用 OBD 进行集群扩容时，实际是通过 OBD 部署一个与原集群架构一样的集群，再把新部署的集群合到原集群上，重启集群，并添加新的 OBServer 进程。
+在通过使用 OBD 进行集群扩容时，实际是通过 OBD 部署一个与原集群架构一样的集群，再把新部署的集群合到原集群上，重启集群，并添加新的 observer 进程。
 
 ## 前提条件
 
