--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in/5.scale-out-by-ocp.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in/5.scale-out-by-ocp.md
@@ -86,7 +86,7 @@
 
 ## 集群 rebalance
 
-添加机器并在新机器启动了 observer 进程后，需要对资源进行负载平衡，将一些负载高的 unit 迁移到负载低的机器上。另外，也会对部分分区进行负载平衡，将一些分区从负载高的机器迁移到负载低的机器上。
+添加机器并在新机器启动了 observer 进程后，需要对资源进行负载平衡，将一些负载高的 Unit 迁移到负载低的机器上。另外，也会对部分分区进行负载平衡，将一些分区从负载高的机器迁移到负载低的机器上。
 
 因为 OceanBase 的资源是以租户为承载，所以扩容本质上是对租户进行扩容，将该租户的资源进行扩容。
 
