--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/6.common-operation-and-maintenance-operations/3.storage-related/1.view-primary-replica-distribution.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/6.common-operation-and-maintenance-operations/3.storage-related/1.view-primary-replica-distribution.md
@@ -6,7 +6,7 @@
 
 目前 OCP 不提供查询主副本的方法。用户想查主副本分布时可以使用命令行查询。
 
-目前命令行支持查询分区的主和查租户 primary zone 的设置。
+目前命令行支持查询分区的主和查租户 Primary Zone 的设置。
 
 ### 查看分区的主
 
@@ -30,7 +30,7 @@ ob-sys 11.166.xx.xx (root@oceanbase)> select tenant_name,concat(svr_ip,svr_port)
 
 其中 `tenant_name` 是租户名，`node` 是 OBServer 节点，`role=1` 代表是主，`cnt` 是租户下分区的主副本在这台 OBServer 节点的数量。
 
-### 查看租户的 primary zone 设置
+### 查看租户的 Primary Zone 设置
 
 ```unknow
 ob-sys 11.166.xx.xx (root@oceanbase)> select tenant_name,primary_zone from __all_tenant;
