--- a/zh-CN/1.users-guide/7.database-object-management/3.manage-table-groups/2.table-group-management-statements.md
+++ b/zh-CN/1.users-guide/7.database-object-management/3.manage-table-groups/2.table-group-management-statements.md
@@ -33,7 +33,7 @@ RANGE COLUMN_NUM SUBPARTITION TEMPLATE {SUBPARTITION partition_name VALUES LESS 
 
 * `tablegroupname` 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用 OceanBase 的关键字。如果要创建的表组名称已存在，并且没有指定 IF NOT EXISTS，则会出现错误。
 
-* `opt_tablegroup_option_list` 表组的分区方式、locality、primary zone 必须和组内的表完全一致。组内的表信息不能独立变更某一项，只可以通过操作表组进行批量操作。
+* `opt_tablegroup_option_list` 表组的分区方式、Locality、Primary Zone 必须和组内的表完全一致。组内的表信息不能独立变更某一项，只可以通过操作表组进行批量操作。
 
 * `opt_tg_partition_option` 表组的分区规则定义，与 CREATE TABLE 使用同样的分区方式。
 
@@ -96,7 +96,7 @@ obclient> SHOW TABLEGROUPS;
 +-----------------+-------------------------------+--------------------+
 ```
 
-## 修改表组的 locality 和 primary zone
+## 修改表组的 Locality 和 Primary Zone
 
 SQL语法如下:
 
@@ -112,11 +112,11 @@ SET LOCALITY [=] locality_name
 
 * `modify_tg_partition_info` 修改表组的分区规则。
 
-* `LOCALITY locality_name` 指定表组的 locality。
+* `LOCALITY locality_name` 指定表组的 Locality。
 
 * `PRIMARY_ZONE primary_zone_name` 指定表组的主 Zone。
 
-## 修改 locality
+## 修改 Locality
 
 将表组 grp1 中所有表的 Locality 都修改为 F@z1,F@z3 的示例如下：
 
