--- a/zh-CN/1.users-guide/8.distributed-storage-management/2.manage-partitions/8.create-an-index-on-a-partitioned-table/1.administrator-guide-overview-of-indexes.md
+++ b/zh-CN/1.users-guide/8.distributed-storage-management/2.manage-partitions/8.create-an-index-on-a-partitioned-table/1.administrator-guide-overview-of-indexes.md
@@ -21,7 +21,7 @@ obclient> CREATE INDEX gkey ON t1(b) PARTITION BY range(b) (PARTITION p0 VALUES 
 ERROR 1235 (0A000): create global index when GTS is off not supported
 ```
 
-由于 OceanBase 数据库的表是索引组织表（ IOT ），对于分区表而言，为了保证指定主键的查询能很快定位到表所在的分区，所以分区键必须是主键的子集。如果需要在分区表上创建局部分区唯一索引（ Local Partitioned Unique Index ），则该索引键需要包含主表的分区键，而对于全局分区唯一索引（ Global Partitioned Unique Index ）并没有这个限制。
+由于 OceanBase 数据库的表是索引组织表（ IoT ），对于分区表而言，为了保证指定主键的查询能很快定位到表所在的分区，所以分区键必须是主键的子集。如果需要在分区表上创建局部分区唯一索引（ Local Partitioned Unique Index ），则该索引键需要包含主表的分区键，而对于全局分区唯一索引（ Global Partitioned Unique Index ）并没有这个限制。
 
 示例如下：
 
