--- a/zh-CN/1.users-guide/9.performance-tuning-guide/4.business-model-tuning/3.Distributed-transaction.md
+++ b/zh-CN/1.users-guide/9.performance-tuning-guide/4.business-model-tuning/3.Distributed-transaction.md
@@ -31,9 +31,9 @@ request_time > time_to_usec('2021-08-24 18:00:00') group by plan_type;
 
 非 Local 计划的请求（ plan_type = 0 除外），大概率会导致事务跨机，相对于单机事务，性能会有一定的影响。可按照如下几种情况进行检查：
 
-1. primary zone 为单 Zone & 单 Unit。
-1. primary zone 为单 Zone & 多 Unit。
-1. primary zone 为 RANDOM。
+1. Primary Zone 为单 Zone & 单 Unit。
+1. Primary Zone 为单 Zone & 多 Unit。
+1. Primary Zone 为 RANDOM。
 
 ### Primary Zone 为单 Zone & 单 Unit
 
@@ -165,7 +165,7 @@ alter system set clog_max_unconfirmed_log_count = 5000;
 
 具体手段：
 
-- 为了避免跨机事务，结合事务内语句执行情况，进行 table group 划分，尽量保证事务单机执行。具体请参见 **primary zone 为单 zone & 多unit**。
+- 为了避免跨机事务，结合事务内语句执行情况，进行 table group 划分，尽量保证事务单机执行。具体请参见 **Primary Zone 为单 Zone & 多 Unit**。
 - 对于批量导入的场景，尽可能利用 PDML 并行执行的能力（ 3.2 及之后的版本）。
 - 根据负载情况调整网络线程数量（ `net_thread_count` )，该配置项默认为 0，进程启动之后，根据当前机器 CPU 核数，自适应计算出本机需要的数量，公式如下：`min( 6, cpu_core/8 )`；根据实际的情况，手动调整预期值，进程重启生效。
 
