--- a/zh-CN/15.oceanbase-database-overview/12.data-reliability-and-high-availability/1.high-availability-architecture/3.distributed-election.md
+++ b/zh-CN/15.oceanbase-database-overview/12.data-reliability-and-high-availability/1.high-availability-architecture/3.distributed-election.md
@@ -66,4 +66,4 @@ OceanBase 数据库假定其运行的物理环境满足一定的约束：
 
 用户也可以变更 primary region，RS 将指挥分区将 Leader 切换至新的 primary region 上。
 
-当用户开启 enable_auto_leader_switch 选项后，RS 会在 primary zone 中使用切主的方式平滑的分散 leader 的分布。
+当用户开启 enable_auto_leader_switch 选项后，RS 会在 Primary Zone 中使用切主的方式平滑的分散 leader 的分布。
