--- a/zh-CN/15.oceanbase-database-overview/14.observer-architecture/2.oceanbase-database-overview-configuration-file.md
+++ b/zh-CN/15.oceanbase-database-overview/14.observer-architecture/2.oceanbase-database-overview-configuration-file.md
@@ -86,7 +86,7 @@ TENANT_ID2_PARAMETER_UPDATES
 
 ### 更新
 
-更新是指各个 OBServer 根据需要，从内部表或者配置文件读取持久化的增量修改加载到内存中的过程。当 OBServer 进程刚启动的时候，它会从配置文件中加载配置项；正常运行过程中如果用户主动修改了配置项，OBServer 则会从内部表中进行加载。
+更新是指各个 OBServer 根据需要，从内部表或者配置文件读取持久化的增量修改加载到内存中的过程。当 observer 进程刚启动的时候，它会从配置文件中加载配置项；正常运行过程中如果用户主动修改了配置项，OBServer 则会从内部表中进行加载。
 
 #### **从配置文件中加载**
 
