--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/6.common-operation-and-maintenance-operations/1.service-related/10.change-server-password.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/6.common-operation-and-maintenance-operations/1.service-related/10.change-server-password.md
@@ -19,7 +19,7 @@
 
    1. 执行以下命令，重启第 1 个节点。
 
-      `ssh 10.200.34.50 docker restart ocp`
+      `ssh xx.xx.xx.xx docker restart ocp`
 
       等待 2～3 分钟后，OCP 的进程会全部重启完成。
 
@@ -31,7 +31,7 @@
       1. 单击前面的任务号，可以看到子任务状态，并通过修改 OCP 内部表来重新触发任务。示例：触发子任务 1209。
 
          ```unknow
-         mysql -h 10.0.0.0 -uroot@ocp_meta#obcluster -p'**1***' -Docp -P3306;
+         mysql -h 10.0.0.0 -uroot@ocp_meta#obcluster -p'******' -Docp -P3306;
          SELECT * FROM ocp_inner_task where id = 1209;
          ```
 
