--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/6.common-operation-and-maintenance-operations/1.service-related/5.restart-OBProxy.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/6.common-operation-and-maintenance-operations/1.service-related/5.restart-OBProxy.md
@@ -59,7 +59,7 @@ cd /opt/taobao/install/obproxy/
 * 当没有 OCP 提供 config server 服务时，proxy 可以依赖 observer 的 rslist 直接启动。
 
   ```sql
-  ./bin/obproxy -p2883 -r'10.125.224.11:2881;10.125.224.22:2881;10.125.
+  ./bin/obproxy -p2883 -r'xx.xx.xx.xx:2881;xx.xx.xx.xx:2881;10.125.
   224.33:2881' -o proxy_idc_name='hz001' -c 'xxbank' -n trade
   ```
 
