--- a/zh-CN/1.users-guide/3.installation-and-deployment/4.environment-and-configuration-checks/1.view-resources-optional.md
+++ b/zh-CN/1.users-guide/3.installation-and-deployment/4.environment-and-configuration-checks/1.view-resources-optional.md
@@ -151,7 +151,7 @@ df -h
 ```shell
 # Please set devname as the network adaptor's name whose ip is  in the setting of severs.
 # if set severs as "127.0.0.1", please set devname as "lo"
-# if current ip is 192.168.1.10, and the ip's network adaptor's name is "eth0", please use "eth0"
+# if current ip is xx.xx.xx.xx, and the ip's network adaptor's name is "eth0", please use "eth0"
 devname: eth0
 ```
 
