--- a/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/3.manage-cluster-parameters/3.modify-cluster-parameters.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/3.manage-cluster-parameters/3.modify-cluster-parameters.md
@@ -49,7 +49,7 @@ obclient> ALTER SYSTEM SET mysql_port=8888;
 
 obclient> ALTER SYSTEM SET mysql_port=8888 ZONE='z1';
 
-obclient> ALTER SYSTEM SET mysql_port=8888 SERVER='192.168.100.1:2882';
+obclient> ALTER SYSTEM SET mysql_port=8888 SERVER='xx.xx.xx.xx:2882';
 ```
 
 OceanBase 数据库中各集群参数的详细说明信息请参见 [系统配置项](../../../12.reference-guide/3.system-configuration-items/1.overview-of-system-configuration-items.md) 章节。
