--- a/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/5.manage-observers/5.isolate-faulty-observers.md
+++ b/zh-CN/1.users-guide/6.basic-database-management/1.manage-clusters/5.manage-observers/5.isolate-faulty-observers.md
@@ -21,7 +21,7 @@ ALTER SYSTEM ISOLATE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone']
    示例如下：
 
    ```sql
-   obclient> ALTER SYSTEM ISOLATE SERVER '10.10.10.10:2882' ZONE='zone1';
+   obclient> ALTER SYSTEM ISOLATE SERVER 'xx.xx.xx.xx:2882' ZONE='zone1';
    ```
 
    SQL 语句执行成功，则表示隔离故障 OBServer 的操作执行成功。同时，可以看到 `__all_server` 内部表中 `status` 字段仍然为 `active`，但是该 OBServer 对应的 `stop_time` 字段不为 `0`，表示该 OBServer 处于`stopped` 状态，且此时 `stop_time` 对应的值为该 OBServer 被执行故障隔离的时间戳。
@@ -33,7 +33,7 @@ ALTER SYSTEM ISOLATE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone']
    *************************** 1. row ***************************
               gmt_create: 2021-12-03 09:50:42.548125
             gmt_modified: 2021-12-08 10:27:02.114234
-                  svr_ip: 10.10.10.10
+                  svr_ip: xx.xx.xx.xx
                 svr_port: 2882
                       id: 2
                     zone: zone2
@@ -67,4 +67,4 @@ ALTER SYSTEM ISOLATE SERVER 'ip:port' [,'ip:port'...] [ZONE [=] 'zone']
    2 rows in set
    ```
 
-隔离故障的 OBServer 后，如果需要解除隔离状态，您可以通过执行 `ALTER SYSTEM START SERVER '10.10.10.10:2882'` 命令来完成。
+隔离故障的 OBServer 后，如果需要解除隔离状态，您可以通过执行 `ALTER SYSTEM START SERVER 'xx.xx.xx.xx:2882'` 命令来完成。
