--- a/zh-CN/15.oceanbase-database-overview/13.database-security/2.identification-and-authentication.md
+++ b/zh-CN/15.oceanbase-database-overview/13.database-security/2.identification-and-authentication.md
@@ -8,9 +8,9 @@
 MySQL 中，一个 user 由 user_name 和 host 共同体组成。使用下列语句创建 3 个具有相同用户名的用户的示例如下：
 
 ```unknow
-create user 'u1'@'%' identified by '123';
-create user 'u1'@'1.1.1.1' identified by '111';
-create user 'u1'@'2.2.2.2' identified by '222';
+create user 'u1'@'%' identified by '***';
+create user 'u1'@'xx.xx.xx.xx' identified by '***';
+create user 'u1'@'xx.xx.xx.xx' identified by '***';
 ```
 
 
